# financial-combinations-classifier

./: CMakeLists.txt  README.md
include/: Combinations.h  Component.h
src/: Combinations.cpp  Component.cpp  main.cpp
